force-app/main/default/objects/Contact/fields/ActiveWebshopUser__c.field-meta.xml
<CustomField>
    <fullName>ActiveWebshopUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Webshop User</label>
    <type>Checkbox</type>
</CustomField>