force-app/main/default/objects/Contact/fields/AdditionalEmail__c.field-meta.xml
<CustomField>
    <fullName>AdditionalEmail__c</fullName>
    <description>Additional Email</description>
    <label>Additional Email</label>
    <type>Email</type>
</CustomField>