force-app/main/default/objects/Contact/fields/DoubleOptInAbandonedCart__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptInAbandonedCart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double OptIn Abandoned Cart</label>
    <type>Checkbox</type>
</CustomField>