force-app/main/default/objects/Contact/fields/DoubleOptInAbandonedCartModalSeen__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptInAbandonedCartModalSeen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double OptIn Abandoned Cart Modal Seen</label>
    <type>Checkbox</type>
</CustomField>