force-app/main/default/objects/Contact/fields/DoubleOptInRequested__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptInRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Optin requested</label>
    <type>Checkbox</type>
</CustomField>