force-app/main/default/objects/Contact/fields/ERPContactNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPContactNumber__c</fullName>
    <externalId>true</externalId>
    <label>ERP Contact Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>