force-app/main/default/objects/Contact/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bar Manager</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Purchasing Manager</fullName>
            </value>
            <value>
                <fullName>F&amp;B Manager</fullName>
            </value>
            <value>
                <fullName>Branch Manager</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Care Home Manager</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Restaurant Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Director</fullName>
            </value>
            <value>
                <fullName>Assistant F&amp;B Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Branch Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Chef</fullName>
            </value>
            <value>
                <fullName>Administrative Director</fullName>
            </value>
            <value>
                <fullName>Nursing Service Manager</fullName>
            </value>
            <value>
                <fullName>Category Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>