force-app/main/default/objects/Contact/fields/IsDecisionMaker__c.field-meta.xml
<CustomField>
    <fullName>IsDecisionMaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Decision Maker?</label>
    <type>Checkbox</type>
</CustomField>