force-app/main/default/objects/Contact/fields/IsInvoiceReceipient__c.field-meta.xml
<CustomField>
    <fullName>IsInvoiceReceipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invoice Receipient?</label>
    <type>Checkbox</type>
</CustomField>