force-app/main/default/objects/Contact/fields/LetterSalutation__c.field-meta.xml
<CustomField>
    <fullName>LetterSalutation__c</fullName>
    <formula>IF(
ISBLANK(TEXT(Salutation)),
&quot;Sehr geehrte Damen und Herren&quot;,
IF(
TEXT(Salutation) = &quot;Mr.&quot;,
&quot;Sehr geehrter Herr &quot; &amp; LastName,
IF(
TEXT(Salutation) = &quot;Ms.&quot;,
&quot;Sehr geehrte Frau &quot; &amp; LastName,
IF(
TEXT(Salutation) = &quot;Divers&quot;,
&quot;Sehr geehrte*r &quot; &amp; LastName,
TEXT(Salutation) &amp; &quot; &quot; &amp; LastName
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter Salutation</label>
    <type>Text</type>
</CustomField>