force-app/main/default/objects/Contact/fields/MachinePrivateAddress__c.field-meta.xml
<CustomField>
    <fullName>MachinePrivateAddress__c</fullName>
    <label>Private Address</label>
    <type>Address</type>
</CustomField>