force-app/main/default/objects/Contact/fields/MachineSelfEmployedSince__c.field-meta.xml
<CustomField>
    <fullName>MachineSelfEmployedSince__c</fullName>
    <label>Self Employed Since</label>
    <type>Date</type>
</CustomField>