force-app/main/default/objects/Contact/fields/OrderNotificationRecipient__c.field-meta.xml
<CustomField>
    <fullName>OrderNotificationRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Notification Recipient</label>
    <type>Checkbox</type>
</CustomField>