force-app/main/default/objects/Contact/fields/PriceVisible__c.field-meta.xml
<CustomField>
    <fullName>PriceVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Visible</label>
    <type>Checkbox</type>
</CustomField>