force-app/main/default/objects/Contact/fields/QualityHelper__c.field-meta.xml
<CustomField>
    <fullName>QualityHelper__c</fullName>
    <formula>IF(ISBLANK( Phone), IF(ISBLANK( MobilePhone),0,1), 1) + IF(LEN(FirstName)&lt;2 , 0, 1) + IF(ISBLANK(Email) , 0, 1) + IF(LEN(LastName)&lt;2 , 0, 1) + IF( ISPICKVAL( Function__c , &quot;&quot;), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Helper</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>