force-app/main/default/objects/Contact/fields/QualityIndicator__c.field-meta.xml
<CustomField>
    <fullName>QualityIndicator__c</fullName>
    <formula>IMAGE( 
CASE( QualityHelper__c , 
1, &quot;/img/samples/stars_100.gif &quot;, 
2, &quot;/img/samples/stars_200.gif&quot;, 
3, &quot;/img/samples/stars_300.gif&quot;, 
4, &quot;/img/samples/stars_400.gif&quot;, 
5, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;0 stars&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Indicator</label>
    <type>Text</type>
</CustomField>