force-app/main/default/objects/Contact/fields/WebshopCustomer__c.field-meta.xml
<CustomField>
    <fullName>WebshopCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webshop Customer</label>
    <type>Checkbox</type>
</CustomField>