force-app/main/default/objects/Contact/fields/WebshopRegisterCheck__c.field-meta.xml
<CustomField>
    <fullName>WebshopRegisterCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-981</description>
    <label>Webshop Register Check</label>
    <type>Checkbox</type>
</CustomField>