force-app/main/default/objects/Contact/fields/WebshopSelfActivationPending__c.field-meta.xml
<CustomField>
    <fullName>WebshopSelfActivationPending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webshop Self Activation Pending</label>
    <type>Checkbox</type>
</CustomField>