force-app/main/default/objects/Contact/fields/WebshopSelfActivationTimestamp__c.field-meta.xml
<CustomField>
    <fullName>WebshopSelfActivationTimestamp__c</fullName>
    <label>Webshop Self Activation Timestamp</label>
    <type>DateTime</type>
</CustomField>