force-app/main/default/objects/Contact/validationRules/Adtional_Email_cant_be_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Adtional_Email_cant_be_filled</fullName>
    <active>false</active>
    <description>Blocks &apos;Additional Email&apos; if standard &apos;Email&apos; field is empty.</description>
    <errorConditionFormula>AND(ISBLANK(Email), 
				NOT(ISBLANK(AdditionalEmail__c)))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please fill in the standard Email field first.</errorMessage>
</ValidationRule>